# kiwi-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
server/: Dockerfile  go.mod  go.sum  main.go
src/: cli.rs  config.rs  dotfiles.rs  error.rs  homebrew.rs  lib.rs  main.rs  sync.rs
